--- a/RR_Balance_Data_SkinLesion.ipynb
+++ b/RR_Balance_Data_SkinLesion.ipynb
@@ -33,7 +33,9 @@
         "colab_type": "text"
       },
       "source": [
-        "**Balancing Classes of Skin Lesion Dataset - Generating images using Data Augmentation**"
+        "**Balancing Classes of Skin Lesion Dataset - Generating images using Data Augmentation**\n",
+        "\n",
+        "Generated Images are stored at : /content/drive/My Drive/Deep Learning Project/Skin Cancer Detection/dataset/RR_Balanced_Data"
       ]
     },
     {
